Archive2/c4/7a92ffe78e254d/output
main.cpp: In function 'int main()':
main.cpp:6:5: error: 'sds' was not declared in this scope
     sds
     ^
main.cpp:7:5: error: expected ';' before 'std'
     std::random_device rd;
     ^
main.cpp:8:25: error: 'rd' was not declared in this scope
     std::mt19937 gen(rd());
                         ^
